chore(i18n): add parity/enforcement checks and wire them into CI

--- a/docs/architecture/I18N.md
+++ b/docs/architecture/I18N.md
@@ -1,56 +1,72 @@
 # Internationalization (i18n)
 
+## Purpose
+Define strict, reusable i18n rules for this template so new CRUD modules keep consistent language files and key usage.
 
-## Language Files
+## Language File Structure
 
 ```
 app/Language/
-├── en/                    # English
+├── en/
 │   ├── Api.php
 │   ├── Auth.php
+│   ├── Email.php
+│   ├── InputValidation.php
 │   ├── Users.php
+│   ├── ApiKeys.php
 │   └── ...
-└── es/                    # Spanish
-    └── ... (same files)
+└── es/
+    └── (same files and same key tree)
 ```
 
-## Usage
+## Naming Convention for New CRUD Modules
+- Use `Plural PascalCase` for domain files.
+- Example: `Products.php`, `Orders.php`, `Invoices.php`.
+- Use keys like `Products.notFound`, `Orders.createdSuccess`.
 
-```php
-// In code
-$message = lang('Auth.loginSuccess');  
-// Returns: "Login successful" or "Inicio de sesión exitoso"
+## Key Usage Rules by Layer
+- `Services`:
+  - Use domain keys (`Products.*`, `Users.*`) for business messages.
+  - Use `Api.*` only for transport-generic messages (`invalidRequest`, `validationFailed`, etc.).
+- `Models`:
+  - Validation messages must use `InputValidation.*` only.
+- `Validation classes` (`app/Validations/*`):
+  - Use `InputValidation.*` only.
+- `Email templates/services`:
+  - Use `Email.*` keys.
 
-// With parameters
-$message = lang('Validation.min_length', [8]);
+## Scope: What Must Be Localized
+Must use `lang()`:
+- API response messages.
+- Exception messages returned to API clients.
+- Validation messages.
 
-// In exceptions
-throw new NotFoundException(lang('Users.notFound'));
-
-// In services
-return ApiResponse::success($data, lang('Users.updatedSuccess'));
-```
+Can stay technical/non-localized:
+- Internal logs (`log_message`).
+- Internal infra/config exceptions (non-user-facing).
 
 ## Locale Detection
-
 Priority order:
-1. Query parameter: `?lang=es`
-2. `Accept-Language` header
-3. Default from `app/Config/App.php`
+1. `Accept-Language` header.
+2. `defaultLocale` in `app/Config/App.php`.
 
-## Adding Translations
+## Guardrails (Required)
+Run:
 
-```php
-// app/Language/en/Products.php
-return [
-    'notFound' => 'Product not found',
-    'created' => 'Product created successfully',
-];
-
-// app/Language/es/Products.php
-return [
-    'notFound' => 'Producto no encontrado',
-    'created' => 'Producto creado exitosamente',
-];
+```bash
+composer i18n-check
 ```
 
+The check enforces:
+- File parity between `en/` and `es/`.
+- Key parity between both locales.
+- All referenced `lang('File.key')` keys exist in both locales.
+- Model validation messages use `InputValidation.*`.
+- Basic detection of hardcoded user-facing exception messages.
+
+## Mandatory Checklist for New CRUD Components
+1. Create `app/Language/en/{ResourcePlural}.php`.
+2. Create `app/Language/es/{ResourcePlural}.php` with the same keys.
+3. Add validation keys in `InputValidation.php` (`en` and `es`).
+4. Use domain keys in services and `InputValidation.*` in model validation messages.
+5. Run `composer i18n-check` and tests before PR.
