--- a/docs/architecture/I18N.es.md
+++ b/docs/architecture/I18N.es.md
@@ -1,56 +1,72 @@
 # Internacionalización (i18n)
 
+## Propósito
+Definir reglas i18n estrictas y reutilizables para este template, de modo que nuevos CRUD/componentes mantengan consistencia en archivos y uso de claves.
 
-## Archivos de Idioma
+## Estructura de Archivos de Idioma
 
 ```
 app/Language/
-├── en/                    # Inglés
+├── en/
 │   ├── Api.php
 │   ├── Auth.php
+│   ├── Email.php
+│   ├── InputValidation.php
 │   ├── Users.php
+│   ├── ApiKeys.php
 │   └── ...
-└── es/                    # Español
-    └── ... (mismos archivos)
+└── es/
+    └── (mismos archivos y mismo árbol de claves)
 ```
 
-## Uso
+## Convención de Nombres para Nuevos CRUD
+- Usar `Plural PascalCase` para archivos de dominio.
+- Ejemplo: `Products.php`, `Orders.php`, `Invoices.php`.
+- Usar claves como `Products.notFound`, `Orders.createdSuccess`.
 
-```php
-// En código
-$message = lang('Auth.loginSuccess');
-// Retorna: "Login successful" o "Inicio de sesión exitoso"
+## Reglas de Uso de Claves por Capa
+- `Services`:
+  - Usar claves de dominio (`Products.*`, `Users.*`) para mensajes de negocio.
+  - Usar `Api.*` solo para mensajes genéricos de transporte (`invalidRequest`, `validationFailed`, etc.).
+- `Models`:
+  - Los mensajes de validación deben usar únicamente `InputValidation.*`.
+- `Validation classes` (`app/Validations/*`):
+  - Usar únicamente `InputValidation.*`.
+- `Email templates/services`:
+  - Usar claves `Email.*`.
 
-// Con parámetros
-$message = lang('Validation.min_length', [8]);
+## Alcance: Qué Debe Internacionalizarse
+Debe usar `lang()`:
+- Mensajes de respuesta API.
+- Mensajes de excepciones retornables al cliente API.
+- Mensajes de validación.
 
-// En excepciones
-throw new NotFoundException(lang('Users.notFound'));
-
-// En servicios
-return ApiResponse::success($data, lang('Users.updatedSuccess'));
-```
+Puede permanecer técnico/no localizado:
+- Logs internos (`log_message`).
+- Excepciones internas de infraestructura/configuración (no user-facing).
 
 ## Detección de Locale
-
 Orden de prioridad:
-1. Parámetro de consulta: `?lang=es`
-2. Header `Accept-Language`
-3. Predeterminado de `app/Config/App.php`
+1. Header `Accept-Language`.
+2. `defaultLocale` en `app/Config/App.php`.
 
-## Añadir Traducciones
+## Guardrails (Obligatorio)
+Ejecutar:
 
-```php
-// app/Language/en/Products.php
-return [
-    'notFound' => 'Product not found',
-    'created' => 'Product created successfully',
-];
-
-// app/Language/es/Products.php
-return [
-    'notFound' => 'Producto no encontrado',
-    'created' => 'Producto creado exitosamente',
-];
+```bash
+composer i18n-check
 ```
 
+El check valida:
+- Paridad de archivos entre `en/` y `es/`.
+- Paridad de claves entre idiomas.
+- Que toda clave referenciada con `lang('Archivo.key')` exista en ambos idiomas.
+- Que mensajes de validación en models usen `InputValidation.*`.
+- Detección básica de mensajes hardcodeados user-facing en excepciones.
+
+## Checklist Obligatorio para Nuevos CRUD/Componentes
+1. Crear `app/Language/en/{ResourcePlural}.php`.
+2. Crear `app/Language/es/{ResourcePlural}.php` con las mismas claves.
+3. Agregar claves de validación en `InputValidation.php` (`en` y `es`).
+4. Usar claves de dominio en services y `InputValidation.*` en validación de models.
+5. Ejecutar `composer i18n-check` y tests antes del PR.
